Fixed top whitespace by setting negative margin top and moved h1 down using padding-top

--- a/src/components-css/dashboard.css
+++ b/src/components-css/dashboard.css
@@ -1,3 +1,8 @@
+body {
+  height: 100%;
+  margin-top: -50px;
+}
+
 .tagline-container {
   position: relative;
   width: 100%;
@@ -7,6 +12,7 @@
 .tagline {
   position: relative;
   font-size: 55px;
+  padding-top: 50px;
 }
 
 .floats-container {
